# MicrosoftProductManagementTools

./: .backup_encryption_key  .backup_status  .env.backup.20250716_064509  .env.production.template  .gitignore  Backend_Acceleration_Directive.md  CLAUDE.md  CONFTEST_USAGE_GUIDE.md  Check-System.ps1  Create-Shortcuts.ps1  Dockerfile  Dockerfile.production  Download-PowerShell751.ps1  ENTERPRISE_OPERATIONS_REPORT.md  Frontend_Acceleration_Directive.md  GUI-CLI-GUIDE.md  GUI-SYNTAX-FIX-COMPLETE.md  Generate-LicenseDashboard-Final.ps1  Makefile  Makefile.production  New-LicenseDashboard.ps1  PHASE2_DOCUMENTATION_COMPLETION_REPORT.md  PHASE35_COMPLETION_REPORT.md  PHASE3_DOCUMENTATION_INTEGRATION_REPORT.md  PHASE4_VALIDATION_REPORT.md  PRODUCTION_RELEASE_ANNOUNCEMENT.md  PRODUCTION_SYSTEM_OPTIMIZATION_REPORT.md  PROJECT_COMPLETION_REPORT.md  QA_Acceleration_Directive.md  README.md  SECURITY_AUDIT_REPORT_20250720.md  Setup-Environment.ps1  Setup-TaskScheduler.ps1  Start-ManagementTools-Legacy.ps1  Start-ManagementTools.ps1  WEEK1_BACKEND_COMPLETION_REPORT.md  backup_script.sh  backup_script_enhanced.sh  check-all-certificates.ps1  compliance-check.ps1  (+54 more)
.claude/: settings.local.json
Apps/: CliApp.ps1  CliApp_Enhanced.ps1  Create-ActionButton-Fix.ps1  GuiApp.ps1  GuiApp_Enhanced.ps1  GuiApp_Enhanced_BACKUP.ps1  GuiApp_Enhanced_BROKEN.ps1  GuiApp_Simple.ps1  GuiApp_Simple_Fixed.ps1
Certificates/: MiraiConstEXO.cer  MiraiConstEXO.crt  MiraiConstEXO.csr  MiraiConstEXO.key  MiraiConstEXO.pfx  certificate-info.txt  mycert.pfx
Config/: alertmanager.yml  appsettings.json  appsettings.json.backup.20250610_195757  appsettings.local.json  appsettings.sample.json  escalation_rules.yml  googledrive.json.backup.20250716_064508  launcher-config.json  notification_config.json  prometheus.yml  secure_config_template.json  slack_config.json
Docker/: powershell-alpine.Dockerfile
Docs/: AUTH-FIX-SUMMARY.md  CI-CD-DEPLOYMENT-GUIDE.md  CLAUDE_SUBSCRIPTION_GUIDE.md  CTO_Python移行技術戦略レポート_最終版_20250718.md  CTO技術戦略レポート_2025年7月17日.md  CodingStandards.md  DEPLOYMENT-GUIDE.md  GUI-CLI-GUIDE.md  INDEX_DEVELOPMENT.md  INDEX_OPERATIONS.md  INDEX_PROJECT_COMPLETION.md  ITSM-tmux並列開発環境仕様書.md  Microsoft365管理ツール変更仕様書(最新版2020718）.md  Microsoft365管理ツール変更仕様書.md  Microsoft365管理ツール技術戦略レポート_CTO向け_最終版_20250717.md  Microsoft365統合管理ツール実装状況レポート.md  Microsoft365統合管理ツール操作手順書.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README-DEPLOYMENT.md  README-MENU.md  README.md  README日本語.md  certificate-update-procedure.md  deployment-summary.md  quick_test_output.txt  インストーラー説明書.md  インストールガイド.md  レポート説明書.md  相互連携システム仕様書.md  証明書テンプレート説明書.md  認証修正サマリー.md
Docs_Backup_20250722_212624/: 00_DOCUMENTATION_INTEGRATION_STRATEGY.md  README.md  conftest_integration_maintenance_guide.md  index.html
Docs_Backup_20250722_220201/: 00_DOCS_ARCHITECTURE.md  ClaudeCode × tmux 開発環境における Microsoft 365 運用ツールの統合運用戦略.md  phase5_completion_report.md
General/: GUI PDF生成テスト_20250716_101657.csv  GUI PDF生成テスト_20250716_101657.html
Installers/: PowerShell-7.5.1-win-x64.msi
Reports/: ComprehensiveReport_20250616.md  FINAL_GO_DECISION_REPORT.json  FINAL_GO_DECISION_REPORT.py  FINAL_GO_DECISION_SUMMARY.md  _20250716_194216.csv  _20250716_194216.html  backup_quality_metrics.json  conftest_integration_report_20250721_131144.md  coverage_improvement_report.json  documentation_integration_report.json  gui_auto_dev_loop_20250721.json  phase2_migration_report.json  security_improvement_report.json
Scripts/: Generate-TimestampedDashboard.ps1  auto_implement.py  conftest_integration_automation.py  deploy-production.sh  docker-entrypoint-production.sh  docker-entrypoint.sh  generate-pdf.js
TestOutput/: UserDailyReport_20250716_204439.csv  UserDailyReport_20250716_204439.html  test_lite.csv  test_lite.html  test_lite_20250718_123554.csv  test_lite_20250718_123554.html  test_report.csv  test_report.html
TestScripts/: automated-test-suite.ps1  check-certificate-info.ps1  check-current-cert-thumbprint.ps1  check-microsoft365-connection.ps1  check-permissions.ps1  complete-system-test.ps1  comprehensive-coverage-analysis.ps1  comprehensive-qa-report.ps1  debug-exo-config.ps1  debug-module-import.ps1  enhanced-functionality-test-report.csv  enhanced-performance-memory-test.ps1  enhanced-security-vulnerability-test.ps1  error-handling-edge-case-test.ps1  final-exchange-test.ps1  final-gui-pdf-test.ps1  find-and-copy-old-cert.ps1  find-certificate-password.ps1  gui-visibility-test.ps1  install-certificate.ps1  performance-memory-test.ps1  security-vulnerability-test.ps1  test-all-buttons.ps1  test-all-features.ps1  test-auth-fix.ps1  test-auth-integrated.ps1  test-auth-simple.ps1  test-auth-windows.ps1  test-auth.ps1  test-certificate-auth.ps1  test-certificate.ps1  test-client-secret.ps1  test-connection-fix.ps1  test-connection.ps1  test-count-fix.ps1  test-daily-report-real.ps1  test-daily-report-structure.ps1  test-data-template-alignment.ps1  test-data-visualization.ps1  test-enhanced-features.ps1  (+36 more)
Tests/: Core.Tests.ps1  EntraID.Tests.ps1  Integration.Tests.ps1  License.Tests.ps1  Microsoft365Management.Tests.ps1  OneDrive.Tests.ps1  PYTEST_GUIDE.md  PYTEST_SETUP_SUMMARY.md  README.md  Security.Tests.ps1  Teams.Tests.ps1  __init__.py  conftest.py  conftest_original.py  continuous_quality_monitor.py  count_tests.py  coverage_85_achievement.py  production_qa_enterprise.py  pytest.ini  pytest_architecture.md  pytest_migration_architecture.md  pytest_simple.ini  qa_test_strategy.md  quality_dashboard.py  requirements.txt  run_all_tests.py  run_basic_tests.py  run_compatibility_tests.py  run_powershell_bridge_tests.py  run_test_categories.py  run_test_suite.py  security-scan-results-fixed.json  security-scan-results.json  standalone_tests.py  test_enterprise_integration.py  unified_pytest_config.py  verify_test_setup.py
frontend/: Dockerfile  README.md  cypress.config.ts  docker-compose.monitoring.yml  healthcheck.html  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  test-integration.config.js  tsconfig.json  vite.config.ts
itmux/: tmux.conf  (+7 more)
(+1596 files in other folders)
